--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="lay"></div>
         </div>
     </section>
+    <a href="" class="btn purchase">PURCHASE PLAN</a>
     <p class="footer">&copy;Sabtech | All Rights Reserved</p>
     <script src="app.js"></script>
 </body>
